--- a/public/css/site.css
+++ b/public/css/site.css
@@ -2,7 +2,7 @@ body {
   font-family: 'Helvetica Neue', Verdana, Helvetica, Arial, sans-serif;
   max-width: 768px;
   margin: 0 auto;
-  padding-top: 1rem;
+  padding: 1rem 2% 0 2%;
   -webkit-font-smoothing: antialiased;
   font-size: 1.125em;
   color: #333;
