--- a/public/css/site.css
+++ b/public/css/site.css
@@ -32,3 +32,28 @@ a {
 a:hover {
   text-decoration: underline;
 }
+
+.circle {
+  border-radius: 100%;
+  -webkit-border-radius: 100%;
+  -moz-border-radius: 100%;
+  width: 20px;
+  height: 20px;
+  border: 1px solid black;
+}
+.circle ~ .circle {
+  margin-left: 0.2rem;
+}
+.circle.active {
+  background-color: red;
+}
+.circle-input {
+  display: flex;
+  align-items: center;
+}
+.circle-control {
+  margin-left: .5rem;
+}
+.circle-control button {
+  font-size: 100%;
+}
