--- a/public/css/site.css
+++ b/public/css/site.css
@@ -58,3 +58,10 @@ a:hover {
 .react-tooltip-lite {
   max-width: 700px !important;
 }
+
+.correct-color {
+  color: green;
+}
+.wrong-color {
+  color: red;
+}
